POR/RefEdge/src/objects/Reference_Request__c.object
<CustomObject>
    <description>This object holds the information necessary for a reference request</description>
    <fields>
        <fullName>Account_Name_f__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adv_Routing_Group__c</fullName>
        <label>Advanced Routing Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Reference Requests</relationshipLabel>
        <relationshipName>Reference_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lead associated to this request</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Reference Requests</relationshipLabel>
        <relationshipName>Reference_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_f__c</fullName>
        <formula>IF(OR(TEXT(Opportunity__r.StageName) == &apos;Closed Won&apos;, TEXT(Opportunity__r.StageName) == &apos;Closed Lost&apos;, TEXT(Opportunity__r.StageName) == &apos;&apos;), TEXT(Opportunity__r.StageName), &apos;Not yet Closed&apos;)</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity association</description>
        <inlineHelpText>Associated opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Reference Requests</relationshipLabel>
        <relationshipName>Reference_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <inlineHelpText>Only Reference Program Members can be added to Member Projects. Only Reference Program Candidates can be added to Candidate Projects.</inlineHelpText>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Candidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Request_Status__c</fullName>
        <label>Reference Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Give Up - Legal Won&apos;t Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Give Up - Service Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Give Up - Contact Left Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Give Up - Contact Unresponsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows for segmenting Reference Use records from other RR records in reporting/dashboard; checked when a Reference Use is recorded from the Reference Use form.</description>
        <label>Reference Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reference_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Auto-populate a new field called ‘Subject’ with “Request for
[opportunity name]”</description>
        <formula>HYPERLINK( &quot;/&quot;+Id , IF( ISBLANK(Opportunity__c) , &apos;Request without Opportunity&apos;, &apos;Request for &apos;+ Opportunity__r.Name))</formula>
        <label>Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Reference Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Requester__c</columns>
        <columns>Reference_Use__c</columns>
        <columns>Reference_Request_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RR-{000000000}</displayFormat>
        <label>Reference Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>